--- a/DemoView/app/src/main/res/layout/activity_main.xml
+++ b/DemoView/app/src/main/res/layout/activity_main.xml
@@ -2,32 +2,45 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="MOVE VIEW"
-            android:id="@+id/btn_move_view"/>
 
         <Button
+            android:id="@+id/btn_move_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="CANVAS DRAW"
-            android:id="@+id/btn_canvas_draw"/>
+            android:text="MOVE VIEW" />
 
         <Button
+            android:id="@+id/btn_canvas_draw"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="SCROLL VIEW"
-            android:id="@+id/btn_scroll_view"/>
+            android:text="CANVAS DRAW" />
 
-        <View
-            android:layerType="software"
+        <Button
+            android:id="@+id/btn_scroll_view"
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@drawable/common_dash_line"/>
+            android:layout_height="wrap_content"
+            android:text="SCROLL VIEW" />
+
+        <Button
+            android:id="@+id/btn_level_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="LEVEL VIEW" />
+
+        <com.example.zzj.demoview.views.PersonGrowthProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:textSize="20sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_rect"
+            android:text="1234"/>
     </LinearLayout>
 </ScrollView>
