animation 2rd edition

--- a/DemoAnimator/app/src/main/res/layout/activity_frame_animation.xml
+++ b/DemoAnimator/app/src/main/res/layout/activity_frame_animation.xml
@@ -4,9 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    tools:context="com.example.zhijianz.demoanimator.FrameAnimationActivity">
+    android:orientation="vertical">
+
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:id="@+id/iv_frame_animation"/>
+        android:id="@+id/iv_frame_animation"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        tools:background="@color/colorPrimary"/>
+    <CheckBox
+        android:button="@null"
+        android:id="@+id/selector"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/anim_selector"/>
 </LinearLayout>
