--- a/DemoAnimator/app/src/main/res/layout/activity_frame_animation.xml
+++ b/DemoAnimator/app/src/main/res/layout/activity_frame_animation.xml
@@ -1,20 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical">
 
     <ImageView
+        android:visibility="gone"
         android:id="@+id/iv_frame_animation"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        tools:background="@color/colorPrimary"/>
+        tools:background="@color/colorPrimary" />
+
     <CheckBox
-        android:button="@null"
+        android:visibility="gone"
         android:id="@+id/selector"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="@drawable/anim_selector"/>
+        android:background="@drawable/anim_selector"
+        android:button="@null" />
+
+    <ImageView
+        android:visibility="gone"
+        android:id="@+id/rotate"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/anim_rotate" />
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:srcCompat="@drawable/ic_android_black_24dp"/>
+
+    <ImageView
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        app:srcCompat="@drawable/ic_android_black_24dp"/>
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        app:srcCompat="@drawable/ic_android_black_24dp"/>
 </LinearLayout>
