--- a/DemoWindow/app/src/main/res/values/dimens.xml
+++ b/DemoWindow/app/src/main/res/values/dimens.xml
@@ -3,6 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <dimen name="protect_btn_size">50dp</dimen>
-    <dimen name="protect_timer_size">40dp</dimen>
+    <dimen name="dialog_width">100dp</dimen>
+    <dimen name="dialog_height">200dp</dimen>
 </resources>
