--- a/DemoView/app/src/main/res/values/styles.xml
+++ b/DemoView/app/src/main/res/values/styles.xml
@@ -8,4 +8,14 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="TypefaceText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:textColor">@color/black60</item>
+    </style>
+
 </resources>
