--- a/DemoWindow/app/src/main/res/layout/activity_main.xml
+++ b/DemoWindow/app/src/main/res/layout/activity_main.xml
@@ -5,20 +5,44 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="bottom"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.zzj.demowindow.MainActivity">
-
-    <EditText
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="add view"
+        android:id="@+id/btn_add"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="update view"
+        android:id="@+id/btn_update"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="remove view"
+        android:id="@+id/btn_remove"/>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="custom dialog"
-        android:id="@+id/custom_dialog"/>
+        android:text="test weight"
+        android:id="@+id/btn_weight"/>
+    
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="BLUE WINDOW"
+        android:id="@+id/btn_blur"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="MOVE WINDOW"
+        android:id="@+id/btn_move"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="IME VIEW"
+        android:id="@+id/btn_ime"/>
 </LinearLayout>
