--- a/DemoWindow/app/src/main/res/values/dimens.xml
+++ b/DemoWindow/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
 
     <dimen name="dialog_width">100dp</dimen>
     <dimen name="dialog_height">200dp</dimen>
+    <dimen name="top_margin">-50dp</dimen>
 </resources>
