--- a/DemoWindow/app/src/main/res/values/styles.xml
+++ b/DemoWindow/app/src/main/res/values/styles.xml
@@ -22,6 +22,7 @@
         <item name="android:windowBackground">@color/transparent</item>
         <!--window的前景，mDecor.setWindowFrame-->
         <item name="android:windowFrame">@color/transparent</item>
+        <item name="android:windowNoTitle">true</item>
     </style>
 
 </resources>
