--- a/DemoWindow/app/src/main/res/layout/activity_main.xml
+++ b/DemoWindow/app/src/main/res/layout/activity_main.xml
@@ -45,4 +45,34 @@
         android:layout_height="wrap_content"
         android:text="IME VIEW"
         android:id="@+id/btn_ime"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TOP_VIEW"
+        android:id="@+id/btn_top"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/dialog_a"
+            android:text="DIALOG_A"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/dialog_b"
+            android:text="DIALOG_B"/>
+    </LinearLayout>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_drawable"
+        android:text="DRAWABLE_TEST"/>
 </LinearLayout>
